# ecn_mobile_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
cfg/: Gains.cfg
include/mobro/: bike.h  robot.h  traj.h  two_steering.h  unicycle.h  utils.h
include/mobro/mpc/: ga.h  mpc.h  mpc_croc.h  mpc_ct.h  mpc_ga.h
launch/: config.rviz  run.launch  sim_launch.py
src/: .control.py.kate-swp  bike.cpp  bike.h  control.cpp  control.py  dr.py  gains_client.cpp  robot.cpp  sim.py  traj.h  two_steering.cpp  unicycle-optctrl.cpp  unicycle.cpp  unicycle.h
urdf/: bike.urdf  r2d2.urdf  two_steering.urdf
urdf/carrot/: carrot.dae  carrot.ive
