<?xml version="1.0"?>
<package format="2">
  <name>mobro</name>
  <version>2.0.0</version>
  <description>The mobro package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="olivier@todo.todo">olivier</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>urdf</depend>
  <depend>urdfdom_headers</depend>

  <export>
       <build_type>ament_cmake</build_type>
  </export>
</package>